<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>reasonable_outdoor_mobile_robot_bringup</name>
  <version>0.0.0</version>
  <description>Package with launch files and run-time configurations for  `ros2_control` examples.</description>

  <maintainer email="hijikata@daihen.co.jp">Masaaki Hijikata</maintainer>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>reasonable_outdoor_mobile_robot_description</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>reasonable_outdoor_mobile_robot_hardware</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
